@@ -1,0 +1,4 @@
+// returns dividend % divisor in range [0, divisor)
+export function modulo(dividend: number, divisor: number): number {
+  return ((dividend % divisor) + divisor) % divisor
+}
