@@ -2,6 +2,7 @@ PixelWalker copy bot changelog
 
 2026-01-03 Version 1.17.3
 - Website: Fix portal id and target id not showing properly in portal list page.
+- Bot: Wrap offset argument for time door blocks when using .smartpaste command.
 
 2025-12-29 Version 1.17.2
 - Website: Update PW <-> EELVL differences.
